apps/istio-gateway/templates/external-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: external-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "jiun2.ddns.net"
    port:
      name: http
      number: 80
      protocol: HTTP
