apps/istio-gateway/templates/internal-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*.internal"
    - "*.jiun2-internal.net"
    port:
      name: http
      number: 80
      protocol: HTTP
